# StageWeaver

./: .gitignore  CHANGELOG.md  FILE_README.md  LICENSE  README.md  design_doc.md  example_flow.py  gr_ocr_funcs.py  main.py  pyproject.toml
examples/: README.md  db_pipeline_example.py  gr_ocr_example.py  gr_ocr_funcs.py
legacy/: gr_ocr_test.py
legacy/file_based/: datamodels.py  design_doc.md  file_pipeline.py
legacy/sqlite3_based_simple_sequence/: datamodels.py  db_pipeline.py  utils.py
src/: datamodels.py  model_init.py  utils.py  worker.py
src/stageweaver/: datamodels.py  db_pipeline.py  utils.py  working.md
stageweaver/: __init__.py  datamodels.py  db_pipeline.py  model_init.py  pipeline.py
