[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stageweaver"
version = "0.1.0"
description = "A production-grade parallel pipeline framework for sequential multi-stage data processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Srihari Bandarupalli"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
keywords = ["pipeline", "parallel", "multiprocessing", "threading", "data-processing", "workflow"]

[project.urls]
Homepage = "https://github.com/sriharib128/StageWeaver"
Documentation = "https://github.com/sriharib128/StageWeaver#readme"

[tool.setuptools.packages.find]
include = ["stageweaver*"]
exclude = ["examples*", "tests*", "archive*"]
