[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stageweaver"
version = "0.4.0"
description = "A production-grade parallel pipeline framework for sequential multi-stage data processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Srihari Bandarupalli"}
]

[project.urls]
Homepage = "https://github.com/sriharib128/StageWeaver"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stageweaver*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
